[gd_scene load_steps=25 format=2]

[ext_resource path="res://art/login_ui/MainMenuBackground.jpg" type="Texture" id=1]
[ext_resource path="res://art/Power-Symbol.png" type="Texture" id=2]
[ext_resource path="res://fonts/Inconsolota/Inconsolata-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://art/login_ui/Sam_Display_Picture.png" type="Texture" id=4]
[ext_resource path="res://scripts/login.gd" type="Script" id=5]
[ext_resource path="res://Sounds/bong_001.tres" type="AudioStream" id=6]
[ext_resource path="res://fonts/Oxygen/Oxygen-Light.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://music/Deep Waters.mp3" type="AudioStream" id=8]
[ext_resource path="res://art/characters/Al_Display_Picture.png" type="Texture" id=9]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 1680, 1050 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 512, 512 )
modulate_color = Color( 1, 1, 1, 0.32549 )

[sub_resource type="StyleBoxTexture" id=13]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 512, 512 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 512, 512 )
modulate_color = Color( 1, 1, 1, 0.709804 )

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=10]
size = 27
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 31
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxTexture" id=17]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 256, 256 )

[sub_resource type="StyleBoxTexture" id=18]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 256, 256 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.372549, 0.372549, 0.372549, 0.827451 )
corner_radius_top_left = 144
corner_radius_top_right = 144
corner_radius_bottom_right = 144
corner_radius_bottom_left = 144

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="DynamicFont" id=16]
size = 33
font_data = ExtResource( 7 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="ClickLoginSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Sounds"

[node name="Background Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -30.0
autoplay = true
bus = "Music"

[node name="Background" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="QuitPanelContainer" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -63.9999
margin_top = -64.0
margin_right = 3269.0
margin_bottom = 3269.0
rect_scale = Vector2( 0.015, 0.016 )
custom_styles/panel = SubResource( 2 )

[node name="QuitButton" type="Button" parent="QuitPanelContainer"]
margin_right = 3333.0
margin_bottom = 3333.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 12 )
icon_align = 1

[node name="StartPanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = 90.0
margin_right = 71.0
margin_bottom = 138.0
custom_styles/panel = SubResource( 5 )

[node name="LoginButton" type="Button" parent="StartPanelContainer"]
margin_right = 143.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 10 )
text = "Login"

[node name="LockedButton" type="Button" parent="StartPanelContainer"]
visible = false
margin_right = 143.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 10 )
text = "Locked"

[node name="Name" type="PanelContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -174.0
margin_top = 25.0
margin_right = 173.0
margin_bottom = 58.0
custom_styles/panel = SubResource( 6 )

[node name="NameLabel" type="Label" parent="Name"]
margin_right = 347.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Sam"
align = 1
valign = 1

[node name="NameLabelAl" type="Label" parent="Name"]
visible = false
margin_right = 347.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Alpha"
align = 1
valign = 1

[node name="NameLabelEnd" type="Label" parent="Name"]
visible = false
margin_right = 347.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "Unkown User"
align = 1
valign = 1

[node name="UserImage" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -132.0
margin_right = 78.0
margin_bottom = 18.0
custom_styles/panel = SubResource( 17 )

[node name="AlImage" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -132.0
margin_right = 78.0
margin_bottom = 18.0
custom_styles/panel = SubResource( 18 )

[node name="LockedImage" type="PanelContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -132.0
margin_right = 78.0
margin_bottom = 18.0
custom_styles/panel = SubResource( 14 )

[node name="EndGameCredits" type="PanelContainer" parent="."]
margin_left = 1152.0
margin_top = 266.0
margin_right = 1827.0
margin_bottom = 792.0
custom_styles/panel = SubResource( 15 )

[node name="Label" type="Label" parent="EndGameCredits"]
margin_right = 675.0
margin_bottom = 537.0
size_flags_horizontal = 15
size_flags_vertical = 15
custom_fonts/font = SubResource( 16 )
text = "Thank you for playing our small game ^_^

---Developed By---
Vanessa Truong
Mark Jaskiewicz Dobrowlanski

---Story By---
Vanessa Truong
Mark Jaskiewicz Dobrowlanski

---Art By---
Vanessa Truong"
align = 1

[connection signal="pressed" from="QuitPanelContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="StartPanelContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
